Fix mobile overflow and video cursor issue

--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -2,7 +2,8 @@ body {
     background-color: $color-primary;
     color: $color-accent;
     font-family: $suisse;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 ol, ul {
