--- a/styles/pages/home/_video.scss
+++ b/styles/pages/home/_video.scss
@@ -38,3 +38,9 @@
     transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1);
     cursor: pointer;
 }
+
+@media only screen and (max-width: 480px) {
+    .video__cursor {
+        display: none;
+    }
+}
